--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>actionhero.js</title>
 
     <script src="/public/javascript/actionheroClient.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
   </head>
 
