Refactoring, starting basic front end site

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <div class="content">
         <div class="title intro-card">MapleStory IO</div>
         <div class="api-card">
-          <div class="api-path">/fm/world/:worldId</div>
+          <div class="api-path">/api/fm/world/:worldId</div>
           <div class="api-desc">Gets a list of rooms with the shops and items in a world.</div>
           <div class="api-params">
             <ul>
